<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/auth_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <EditText 
        android:id="@+id/auth_user_name"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_name"/>
    <EditText 
        android:id="@+id/auth_user_pass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_pass"/>
    <EditText 
        android:id="@+id/auth_user_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_email"/>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		<TextView         
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/save"/>
		<CheckBox
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:id="@+id/auth_save_user_data"/>
    </LinearLayout>
</LinearLayout>
